--- a/notes/事件详解.md
+++ b/notes/事件详解.md
@@ -15,4 +15,19 @@
     - MVC、MVP、MVVM等模式，是事件模式更高级、更有效的额"玩法"
     - 日常开发的时候，使用已有事件的机会比较多，自己声明事件的机会比较少，所以先学使用；
 
-    
+### 事件的应用
+- 实例演示
+    - 派生（继承）与扩展（extends）
+- 事件模型的五个组成部分
+    1. 事件的拥有者（event source，对象）；
+    2. 事件成员（event，成员）；
+    3. 事件的响应者（event subscriber，对象）；
+    4. 事件处理器（event handler，成员）--本质是一个回调方法；
+    5. 事件订阅--把事件处理器与事件关联在一起，本质上是一种以委托类型为基础的"约定"；
+- 注意
+    - 事件处理器是方法成员；
+    - 挂接事件处理器的时候，可以使用委托实例，也可以直接使用方法名，这是个"语法糖"；
+    - 事件处理器对事件的订阅不是随意的，匹配与否由声明事件时所使用的委托类型来检测；
+    - 事件可以同步调用也可以异步调用；
+
+
